@@ -225,6 +225,12 @@ class TestWCSvnCommandPath(CommonSvnTests):
         '''
         XMLWCStatus.fromstring(xml, self.root)
 
+    def test_status_wrong_xml(self):
+        # testing for XML without author - this used to raise an exception
+        xml = u'<entry path="/home/jean/zope/venv/projectdb/parts/development-products/DataGridField">\n<wc-status item="incomplete" props="none" revision="784">\n</wc-status>\n</entry>'
+        st = XMLWCStatus.fromstring(xml, self.root)
+        assert len(st.incomplete) == 1
+
     def test_diff(self):
         p = self.root / 'anotherfile'
         out = p.diff(rev=2)
