@@ -15,6 +15,8 @@ Changes between 1.0.0 and 1.0.1
 
 * fix issue #33: added --version flag (thanks Benjamin Peterson) 
 
+* fix issue #32: adding support for "incomplete" paths to wcpath.status()
+
 * "Test" prefixed classes are *not* collected by default anymore if they 
   have an __init__ method 
 
